AD-68,AD-69 fixed and alignment issue fixed. (#74)
* AD-68,AD-69 fixed and alignment issue fixed.

* changed default value for adgroup display by gutenberg

* Added appropriate label for the ad size selection

--- a/public/css/wpadcenter-public.css
+++ b/public/css/wpadcenter-public.css
@@ -15,3 +15,10 @@
 .aligncenter .wpadcenter-adgroup-row div{
 	margin:0 auto;
 }
+.wpadcenter-single-ad-default{
+	display:flex;
+	align-items:center;
+}
+.wpadcenter-single-ad-default div{
+	margin:0 auto;
+}
